fix 3d carusel arrows, still need work on mobile

--- a/begoodPlus/static_cdn/assets/main/css/style.scss
+++ b/begoodPlus/static_cdn/assets/main/css/style.scss
@@ -226,14 +226,25 @@
 
 
     .carusel-control {
+        //position: absolute;
+        top: 50%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        width: 125%;
+        position: relative;
+        transform: translate(10%, 0);
         .previous-button {
-            position: absolute;
+            background: transparent;
+            border: 0;
+            transform: rotate(-90deg) translate(0, 0);
+            /*position: absolute;
             top: 20%;
             transform: rotate(-90deg) translate(-50%, 0);
             right: 470px;
             padding: 20px;
             background: transparent;
-            border: 0;
+            border: 0;*/
 
             :hover {
                 color: white;
@@ -241,14 +252,16 @@
         }
 
         .next-button {
-
-            position: absolute;
+            background: transparent;
+            border: 0;
+            transform: rotate(90deg) translate(0, 0);
+            /*position: absolute;
             top: 50%;
             transform: rotate(90deg) translate(-50%, 0);
             right: -125px;
             padding: 20px;
             background: transparent;
-            border: 0;
+            border: 0;*/
 
             :hover {
                 color: white;
